re-did issue 40 as there where problems with the old structure (no easy possibility to adjust visibility information on deletion/insertion/sorting of rows/colums) - restyled Edit table screen - minor bug fixes (removed 2 hidden fields, HTML syntax error) - modified Export table text - added Install Time to Debug Information - added Footer to wp-Table import table
git-svn-id: https://wp-table-reloaded.googlecode.com/svn/trunk@72 335f5990-30c3-11de-96ab-f16d9912eac9

--- a/admin/admin-style.css
+++ b/admin/admin-style.css
@@ -61,6 +61,11 @@ table.wp-table-reloaded-data-manipulation { width:100%; }
     vertical-align:middle!important;
 }
 
+#table_contents .check-column {
+    padding: 3px 7px!important;
+    width: auto!important;
+}
+
 .no-wrap {
     white-space:nowrap;
 }
